# jumpserver-sdk-py

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
jumpserver/: __init__.py  auth.py  client.py  errors.py
jumpserver/models/: __init__.py  account.py  acl.py  asset.py  asset_extras.py  audit.py  auth.py  extra.py  org.py  permission.py  ticket.py  user.py
jumpserver/services/: __init__.py  accounts.py  acls.py  assets.py  audits.py  auth.py  labels.py  ops.py  orgs.py  perms.py  rbac.py  settings.py  terminal.py  tickets.py  users.py  xpack.py
jumpserver/utils/: __init__.py
tests/: test_client.py
