[project]
name = "jumpserver-sdk"
version = "0.1.0"
description = "Python SDK for JumpServer API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "fit2cloud-sdk"},
]
dependencies = [
    "requests>=2.31.0",
    "httpsig>=1.3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/fit2cloud-sdk/jumpserver-sdk-py"
Repository = "https://github.com/fit2cloud-sdk/jumpserver-sdk-py.git"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jumpserver*"]

[tool.setuptools.package-data]
"jumpserver" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
